<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/card_background"
    android:paddingTop="@dimen/margin_top"

    android:paddingBottom="@dimen/margin_bottom">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@color/card_primary_cell_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/login_email"
        android:hint="@string/email_hint"
        android:drawableLeft="@drawable/ic_email_tiny"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/login_password"
        android:hint="@string/password_hint"
        android:drawableLeft="@drawable/ic_password_tiny"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="validation"
        android:padding="5dp"
        android:id="@+id/validation"/>

    <Button
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textColor="@drawable/textcolour_button_white"

        android:background="@drawable/button_action_solid"/>
    <TextView
        android:background="@drawable/button_transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password"
        />
</LinearLayout>
