<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/card_background"
    android:paddingTop="@dimen/margin_top"

    android:paddingBottom="@dimen/margin_bottom">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@color/card_primary_cell_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <EditText
        android:id="@+id/edit_email_prefix"
        android:hint="@string/email_hint"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\@"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_email_domain"></Spinner>
</LinearLayout>
    <EditText
        android:id="@+id/login_password"
        android:hint="password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="validation"
        android:padding="5dp"
        android:id="@+id/validation"/>

    <Button
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@drawable/textcolour_button_white"

        android:background="@drawable/button_action_solid"/>
    <TextView
        android:background="@drawable/button_transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password"
        />
</LinearLayout>
